Add simple test with code coverage